test/functions/deitz/test_var_function_return_expr.good
test_var_function_return_expr.chpl:3: In function 'foo':
test_var_function_return_expr.chpl:4: error: illegal expression to return by ref
