test/functions/deitz/test_var_function_return_expr.chpl
var x, y: int;

proc foo() ref {
  return x + y;
}

foo() = 2;

writeln(x, y);
